<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/_80dp"
    android:id="@+id/item"
    android:layout_marginEnd="@dimen/_16dp"
    android:background="@drawable/back_ground_save"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:ignore="UselessParent">

    <LinearLayout
        android:id="@+id/colorItem"
        android:layout_width="@dimen/_65dp"
        android:layout_height="@dimen/_65dp"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="@dimen/_10dp"
        android:background="@drawable/test_hihi"
        android:gravity="center">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="@dimen/_50dp"
            android:layout_height="@dimen/_50dp"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/ic_cafe" />
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/linearLayoutItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/colorItem"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="@dimen/_70dp"
            android:layout_height="wrap_content"
            android:text="@string/cafe"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sp" />

        <TextView
            android:layout_marginEnd="20dp"
            android:id="@+id/tvMoney"
            android:layout_width="@dimen/_70dp"
            android:layout_height="wrap_content"
            android:text="@string/_400"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sp" />
    </LinearLayout>
</RelativeLayout>